Closed
Bug 389808
Opened 18 years ago
Closed 18 years ago
Firefox start with a blank personal toolbar / converts livemarks to bookmark folders
Categories
(Firefox :: Bookmarks & History, defect)
Firefox
Bookmarks & History
Tracking
()
RESOLVED
FIXED
Firefox 3 alpha7
People
(Reporter: fredbezies, Assigned: dietrich)
References
Details
(Keywords: dataloss, regression)
Attachments
(1 file, 1 obsolete file)
|
6.25 KB,
patch
|
moco
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux x86_64; en-US; rv:1.9a7pre) Gecko/2007072707 Firefox/3.0a7pre
Build Identifier: Mozilla/5.0 (X11; U; Linux x86_64; en-US; rv:1.9a7pre) Gecko/2007072707 Minefield/3.0a7pre
This is very recent regression.
When I start a newly build firefox (homemade one), I cannot see anymore all the content of the personal toolbar. It is just blank.
It work yesterday on my homemade trunk build (made at 26th july, midnight mozilla.org time).
Could it be related to bug 385937 or to bug 319455 ?
Reproducible: Always
Steps to Reproduce:
1.Grab source
2.Build firefox
3.Launch firefox
Actual Results:
Blank personal toolbar
Expected Results:
My bookmarks displayed.
Here is the .mozconfig I used :
"#
# See http://www.mozilla.org/build/ for build instructions.
#
. $topsrcdir/browser/config/mozconfig
# Options for 'configure' (same as command-line options).
ac_add_options --enable-optimize="-Os -freorder-blocks -fno-reorder-functions"
ac_add_options --disable-debug
ac_add_options --disable-tests
ac_add_options --enable-canvas
ac_add_options --enable-svg
ac_add_options --enable-pango
ac_add_options --enable-default-toolkit=cairo-gtk2
ac_add_options --enable-libxul
ac_add_options --enable-places-bookmarks
ac_add_options --enable-strip"
And my build was made at 26th july 10:00pm mozilla.org time.
My OS is an ubuntu linux 7.04 AMD64 up-to-date.
Comment 1•18 years ago
|
||
Do you have extensions in your profile?
Does opening a second window show contents in the toolbar?
| Reporter | ||
Comment 2•18 years ago
|
||
No extensions.
Opening another windows doesn't help.
Maybe opening, then closing too rapidly the window corrupt places.sqlite ?
Comment 3•18 years ago
|
||
I'm seeing this now after doing a large delete of my bugzilla history. Everything's still in the menu though.
I was able to set it as the bookmark toolbar folder and it works again, but maybe the anno expired, somehow?
Comment 4•18 years ago
|
||
Frederic, do you see anything in your history menu, bookmarks menu, or if you open up the history sidebar, bookmarks sidebar or bookmark organizer dialog?
this might be fall out from #319455.
We've had similar sounding problems where some SQL fails, and then we fail to initialize a places service.
Frederic: would you mind sharing your places.sqlite file with me privately, over email?
Comment 5•18 years ago
|
||
> I was able to set it as the bookmark toolbar folder and it works again, but
> maybe the anno expired, somehow?
you are on to something. I have some older places.sqlite from various people where the annotation for the personal toolbar folder appears to be expirable.
investigating...
Comment 6•18 years ago
|
||
if we do happen to be expiring the personal toolbar folder annotation, I don't think we want to ship M7 with this.
Assignee: nobody → sspitzer
Flags: blocking-firefox3?
OS: Linux → All
Hardware: PC → All
Target Milestone: --- → Firefox 3 M7
| Reporter | ||
Comment 7•18 years ago
|
||
(In reply to comment #4)
> Frederic, do you see anything in your history menu, bookmarks menu, or if you
> open up the history sidebar, bookmarks sidebar or bookmark organizer dialog?
They are all displayed ok...
>
> this might be fall out from #319455.
>
> We've had similar sounding problems where some SQL fails, and then we fail to
> initialize a places service.
>
> Frederic: would you mind sharing your places.sqlite file with me privately,
> over email?
>
No. Of course. Send it right now.
By the way, replacing a backup version of my places.sqlite cure the bug...
Comment 8•18 years ago
|
||
With one places.sqlite I have from an end user, every expiration (including the personal toolbar folder) is EXPIRE_WEEKS (4) and none are EXPIRE_NEVER (1).
this could explain what Frederic and Mconnor are seeing.
Status: NEW → ASSIGNED
Comment 9•18 years ago
|
||
I saw this also. Had to delete places.sqlite but this was not enough. I also had to use another copy of my bookmarks. But it finally works now.
| Assignee | ||
Comment 10•18 years ago
|
||
(In reply to comment #8)
> With one places.sqlite I have from an end user, every expiration (including the
> personal toolbar folder) is EXPIRE_WEEKS (4) and none are EXPIRE_NEVER (1).
>
> this could explain what Frederic and Mconnor are seeing.
>
I'm seeing the same in my places.sqlite that was used exclusively with alpha 6. We'll have to make sure that setters are using the right expiration value, and then we'll probably also have to add code to the schema migration to change these to EXPIRE_NEVER.
| Assignee | ||
Comment 11•18 years ago
|
||
We'll need to do two things:
1. re-add the toolbar annotation to the toolbar folder
2. update existing EXPIRE_WEEKS annotations to EXPIRE_NEVER
Also, updating the schema migration doesn't help those who've already updated to the nightly. Instead we could add some migration code in one of the services, that runs only if zero items have the toolbar annotation, and then remove the code in the betas.
Updated•18 years ago
|
Assignee: sspitzer → dietrich
Status: ASSIGNED → NEW
Updated•18 years ago
|
Depends on: 319455
Keywords: regression
Comment 12•18 years ago
|
||
I saw this this morning on my Windows 2000 system. I have since made a new profile and everything is OK with bookmarks. The old profile started as a Firefox 2 profile that was migrated to Minefield.
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a7pre) Gecko/2007072705 Minefield/3.0a7pre ID:2007072705
Comment 13•18 years ago
|
||
(In reply to comment #12)
Yeah, I see this too. When I start the places.sqlite and bookmarks.html file in a new profile there is no toolbar problem. I used those files for my default profile and now I have my normal three months-history and also a bookmarks toolbar.
| Assignee | ||
Comment 14•18 years ago
|
||
- changes annotation constants, reverting EXPIRE_NEVER back to the pre-bug319455 value
- re-adds the bookmark toolbar folder annotation to the folder that has the default toolbar folder title
- does *not* fix the problem for nightly testers who've renamed their toolbar folder, or changed it to a different folder.
Attachment #274197 -
Flags: review?(sspitzer)
| Assignee | ||
Comment 15•18 years ago
|
||
verification steps:
1. create a profile w/ an Alpha 6 build (or pre-checkin of bug 319455)
2. close the app, open up the sqlite file with SQLite Database Browser, and delete the record from moz_items_annos where anno_attribute_id = 1
3. open the profile with the 2007072705 nightly, and note that the bookmarks toolbar is empty
4. using a build with this patch, open the profile, and note that the bookmarks toolbar contents are back
note:
this bug affects other annotation consumers as well, such as microsummaries, and livemarks. the restoration of EXPIRE_NEVER = 4 fixes these consumers also.
| Assignee | ||
Comment 16•18 years ago
|
||
- revert the expiration constants back to their pre-319455 values where possible, to reduce confusion
- add more comments
Attachment #274197 -
Attachment is obsolete: true
Attachment #274201 -
Flags: review?(sspitzer)
Attachment #274197 -
Flags: review?(sspitzer)
Comment 17•18 years ago
|
||
Comment on attachment 274201 [details] [diff] [review]
fix v2
r=sspitzer
Attachment #274201 -
Flags: review?(sspitzer) → review+
| Assignee | ||
Comment 18•18 years ago
|
||
Checking in toolkit/components/places/public/nsIAnnotationService.idl;
/cvsroot/mozilla/toolkit/components/places/public/nsIAnnotationService.idl,v <-- nsIAnnotationService.idl
new revision: 1.17; previous revision: 1.16
done
Checking in toolkit/components/places/src/nsNavBookmarks.cpp;
/cvsroot/mozilla/toolkit/components/places/src/nsNavBookmarks.cpp,v <-- nsNavBookmarks.cpp
new revision: 1.115; previous revision: 1.114
done
Checking in toolkit/components/places/src/nsNavHistoryExpire.cpp;
/cvsroot/mozilla/toolkit/components/places/src/nsNavHistoryExpire.cpp,v <-- nsNavHistoryExpire.cpp
new revision: 1.9; previous revision: 1.8
done
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Comment 19•18 years ago
|
||
Live bookmarks on the bookmarks toolbar didn't get the reload context menu after this landed.
My 20070721 places.sqlite backup works fine
Comment 20•18 years ago
|
||
> Live bookmarks on the bookmarks toolbar didn't get the reload context
> menu after this landed.
yikes.
This bug will have wiped out the annotations for livemarks and converted them to regular book folders.
Updated•18 years ago
|
Summary: Firefox start with a blank personal toolbar → Firefox start with a blank personal toolbar / converts livemarks to bookmark folders
Updated•18 years ago
|
Flags: blocking-firefox3? → blocking-firefox3+
Comment 22•18 years ago
|
||
unfortunately, jay patel also hit this bug.
for future reference, it is the 2007072704 that kills your annotations.
You need to log in
before you can comment on or make changes to this bug.
Description
•