Bug 389808  Firefox start with a blank personal toolbar (r=sspitzer, a=schrep)